--- a/index.html
+++ b/index.html
@@ -1,21 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nayomis</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Bienvenido a mi página</h1>
-    <h2>Soy Nayomis</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repudiandae impedit maiores libero eos eaque quae 
-        inventore, nobis quam explicabo architecto minus suscipit deleniti ducimus officiis illo 
-        excepturi quisquam quo.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="inicio">
+        <h1>Bienvenido a mi página</h1>
+        <h2>Soy Nayomis</h2>
+        <p>Este es mi espacio personal donde comparto un poco sobre mí, mis proyectos y mis pasiones.</p>
+        <img src="yo.jpeg" alt="Foto" width="200">
+    </section>
+
     <hr>
-<ul>
-    <p>Inge nena 👄</p>
-    <img src="WhatsApp Image 2025-03-02 at 17.42.47.jpeg" alt="">
-</ul>
+
+    <section id="sobre-mi">
+        <h2>Sobre mí</h2>
+        <p>Soy una estudiante de desarrollo de software</p>
+    </section>
+
+    <section id="proyectos">
+        <h2>Mis proyectos</h2>
+        <ul>
+            <li>
+                <h3>Proyecto 1</h3>
+                <p>Descripción breve del proyecto.</p>
+            </li>
+            <li>
+                <h3>Proyecto 2</h3>
+                <p>Descripción breve del proyecto.</p>
+            </li>
+        </ul>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Puedes escribirme a: <br>
+            <a href="naomibecerrilcarmona@gmail.com">naomibecerrilcarmona@gmail.com</a></p>
+        <p>Sígueme en mis redes sociales:</p>
+        <ul>
+            <a href="https://github.com/naobc">GitHub</a><br>
+            <a href="https://www.facebook.com/share/1RLuto7FE4/">Facebook</a><br>
+            <a href="https://www.instagram.com/nayomisb?igsh=MWRmN2pvYjkyNndsMw==">Instagram</a><br>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 Nayomis. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
