--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+        <img src="bola8.png" alt="Logo Nayomis">
+    </div>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
