Mi pagina personal

--- a/index.html
+++ b/index.html
@@ -8,31 +8,74 @@
 </head>
 <body>
     <header>
+        <h1>Bienvenido a mi página</h1>
         <div class="logo">
-        <img src="bola8.png" alt="Logo Nayomis">
+        <img src="bola8.png" alt="Logo">
     </div>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
-
+<br>
     <section id="inicio">
-        <h1>Bienvenido a mi página</h1>
         <h2>Soy Nayomis</h2>
         <p>Este es mi espacio personal donde comparto un poco sobre mí, mis proyectos y mis pasiones.</p>
         <img src="yo.jpeg" alt="Foto" width="200">
     </section>
 
-    <hr>
-
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
         <p>Soy una estudiante de desarrollo de software</p>
+    </section>
+
+    <section id="hobbies">
+    <h2>Hobbies</h2>
+    <div class="cards">
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="music.jpg" alt="Música">
+                </div>
+                <div class="card-back">
+                    <h3>Música</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus amet explicabo est vel ut veniam eaque ab, facere fugit tempore eius dolor perspiciatis ad at beatae numquam tenetur labore accusantium.</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="book.jpg" alt="Lectura">
+                </div>
+                <div class="card-back">
+                    <h3>Lectura</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga vitae natus atque nisi, accusamus molestiae perferendis modi molestias porro voluptas, facilis nostrum dolor est veritatis. Facere velit dolorum distinctio nesciunt?</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <img src="baking.jpg" alt="Cocina">
+                </div>
+                <div class="card-back">
+                    <h3>Cocina</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quaerat, tempora, nulla ab architecto quam beatae vitae maxime eveniet totam, earum nemo neque ad accusamus officia similique ut aliquid reiciendis!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <section id="libros y peliculas favoritos">
+        <h2>Libros y peliculas favoritos</h2>
+        <p>S</p>
     </section>
 
     <section id="proyectos">
@@ -62,7 +105,8 @@
     </section>
 
     <footer>
-        <p>© 2025 Nayomis. Todos los derechos reservados.</p>
+        <p>© 2025 Nayomis.</p>
+        <p>Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
