Página personal casi terminada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -32,6 +31,8 @@
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
         <p>Soy una estudiante de desarrollo de software</p>
+        <P>Tengo 19 años</P>
+        <p>Amo los gatos y el cafe</p>
     </section>
 
     <section id="hobbies">
@@ -44,7 +45,10 @@
                 </div>
                 <div class="card-back">
                     <h3>Música</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus amet explicabo est vel ut veniam eaque ab, facere fugit tempore eius dolor perspiciatis ad at beatae numquam tenetur labore accusantium.</p>
+                    <p>Te comparto mi playlist</p>
+                    <a href="https://open.spotify.com/playlist/0Wdwe3x9SV564WzdHt5BUe?si=4A4MxjR4Q7iE1V0LSuYIIA&pi=2nscxaGaQi2eg" target="_blank">
+        Escuchar en Spotify
+    </a>
                 </div>
             </div>
         </div>
@@ -55,7 +59,10 @@
                 </div>
                 <div class="card-back">
                     <h3>Lectura</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga vitae natus atque nisi, accusamus molestiae perferendis modi molestias porro voluptas, facilis nostrum dolor est veritatis. Facere velit dolorum distinctio nesciunt?</p>
+                    <p>Amo leer novelas romanticas</p>
+                    <a href="libros_fav.html" target="_blank">
+                        Libros fav
+                    </a>
                 </div>
             </div>
         </div>
@@ -66,31 +73,12 @@
                 </div>
                 <div class="card-back">
                     <h3>Cocina</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quaerat, tempora, nulla ab architecto quam beatae vitae maxime eveniet totam, earum nemo neque ad accusamus officia similique ut aliquid reiciendis!</p>
+                    <p>Mi love language es cocinar</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-    <section id="libros y peliculas favoritos">
-        <h2>Libros y peliculas favoritos</h2>
-        <p>S</p>
-    </section>
-
-    <section id="proyectos">
-        <h2>Mis proyectos</h2>
-        <ul>
-            <li>
-                <h3>Proyecto 1</h3>
-                <p>Descripción breve del proyecto.</p>
-            </li>
-            <li>
-                <h3>Proyecto 2</h3>
-                <p>Descripción breve del proyecto.</p>
-            </li>
-        </ul>
-    </section>
 
     <section id="contacto">
         <h2>Contacto</h2>
